--- a/app/src/main/res/layout/item_user_shimmer.xml
+++ b/app/src/main/res/layout/item_user_shimmer.xml
@@ -11,7 +11,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
-        android:background="@color/shimmer"
+        android:background="@color/teal_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
